crates/keron-lang/tests/corpus/errors/check/union_ordering_rejected.keron
# Union variants are categories, not points on a scale — ordering is
# rejected. Widen through an explicit `String` annotation to opt in.
val nonsense: Boolean = os_type() < "Macos"
